--- a/CIT-APP/app/src/main/AndroidManifest.xml
+++ b/CIT-APP/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Exercises"></activity>
+        <activity android:name=".Instruction"></activity>
+        <activity android:name=".Exercises" />
         <activity android:name=".Trainingset" />
         <activity android:name=".MainActivity">
             <intent-filter>
