--- a/CIT-APP/app/src/main/AndroidManifest.xml
+++ b/CIT-APP/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.cit_app">
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SyllableRepetitionFinished"></activity>
+        <activity android:name=".Word_List"></activity>
+        <activity android:name=".MinimalPairs" />
+        <activity android:name=".SyllableRepetitionFinished" />
         <activity android:name=".SyllableRepetition" />
         <activity android:name=".Settings" />
         <activity android:name=".MinimalPairsExerciseFinished" />
