--- a/CIT-APP/app/src/main/AndroidManifest.xml
+++ b/CIT-APP/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Word_List"></activity>
+        <activity android:name=".Picture_Description"></activity>
+        <activity android:name=".Word_List" />
         <activity android:name=".MinimalPairs" />
         <activity android:name=".SyllableRepetitionFinished" />
         <activity android:name=".SyllableRepetition" />
