--- a/CIT-APP/app/build.gradle
+++ b/CIT-APP/app/build.gradle
@@ -34,7 +34,7 @@ repositories {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
+    implementation  'de.hdodenhof:circleimageview:3.1.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
@@ -47,8 +47,11 @@ dependencies {
     implementation files('../libs/commons-math3-3.6.1.jar')
     implementation files('../libs/greendao-api-3.3.0.jar')
     implementation files('../libs/greendao-3.3.0.jar')
+    implementation 'androidx.wear:wear:1.0.0'
     testImplementation 'junit:junit:4.12'
+    compile 'com.github.iammert:ExpandableLayout:1.3'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    compileOnly 'com.google.android.wearable:wearable:2.5.0'
 }
