--- a/CIT-APP/app/src/main/AndroidManifest.xml
+++ b/CIT-APP/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
             android:theme="@style/Theme.AppCompat.Light.DarkActionBar"/>
         <activity
             android:name=".other_activities.MainActivity"
-            android:label="CIT-APP"
+            android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
