--- a/CIT-APP/app/build.gradle
+++ b/CIT-APP/app/build.gradle
@@ -48,10 +48,12 @@ dependencies {
     implementation files('../libs/greendao-api-3.3.0.jar')
     implementation files('../libs/greendao-3.3.0.jar')
     implementation 'androidx.wear:wear:1.0.0'
+    implementation 'androidx.exifinterface:exifinterface:1.3.0-alpha01'
     testImplementation 'junit:junit:4.12'
     compile 'com.github.iammert:ExpandableLayout:1.3'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     compileOnly 'com.google.android.wearable:wearable:2.5.0'
+    implementation'com.davemorrissey.labs:subsampling-scale-image-view:3.10.0'
 }
