[mod] changed pictures disabled upload from camera and added gaussian comparison model

--- a/CIT-APP/app/src/main/AndroidManifest.xml
+++ b/CIT-APP/app/src/main/AndroidManifest.xml
@@ -22,7 +22,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".other_activities.TrainingsetExerciseFinished"
+        <activity android:name=".other_activities.Gaussdistribution"></activity>
+        <activity
+            android:name=".other_activities.TrainingsetExerciseFinished"
             android:theme="@style/Theme.AppCompat.Light.DarkActionBar" />
         <activity
             android:name=".other_activities.TrainingsetFinished"
