[mod] fixed syllable repetition bug and changed file names

--- a/CIT-APP/app/src/main/AndroidManifest.xml
+++ b/CIT-APP/app/src/main/AndroidManifest.xml
@@ -68,11 +68,11 @@
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.DarkActionBar" />
         <activity
-            android:name=".exercises.Picture_Description"
+            android:name=".exercises.PictureDescription"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.DarkActionBar" />
         <activity
-            android:name=".exercises.Word_List"
+            android:name=".exercises.WordList"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.DarkActionBar" />
         <activity
