[mod] final commitgit add *git add *

--- a/CIT-APP/app/src/main/AndroidManifest.xml
+++ b/CIT-APP/app/src/main/AndroidManifest.xml
@@ -22,15 +22,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".other_activities.Gaussdistribution"></activity>
         <activity
             android:name=".other_activities.TrainingsetExerciseFinished"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.DarkActionBar" />
         <activity
             android:name=".other_activities.TrainingsetFinished"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.DarkActionBar" />
         <activity
             android:name=".other_activities.ProfileMain"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
             android:windowSoftInputMode="stateHidden" />
         <activity
